fixed dashboard student

--- a/student.html
+++ b/student.html
@@ -9,16 +9,21 @@
 <div class="container">
     <h1>Student Dashboard</h1>
 
-    <h3>Subject-wise Attendance</h3>
-    <input type="number" id="viewSubjectId" placeholder="Subject ID">
-    <button onclick="getSubjectWise()">Check</button>
+    <
 
-    <div id="subjectResult"></div>
+    <h3>Enter Student ID</h3>
 
-    <h3>Overall Attendance</h3>
-    <button onclick="getOverall()">Check Overall</button>
+<input type="number" id="studentIdInput" placeholder="Enter your ID">
 
-    <div id="overallResult"></div>
+<br><br>
+
+<button onclick="getOverall()">View Overall Attendance</button>
+<button onclick="getSubjectWise()">View Subject-wise Attendance</button>
+
+<div id="overallResult"></div>
+<div id="subjectResult"></div>
+
+
 
     <br><br>
     <a href="index.html">Back</a>
