--- a/teacher.html
+++ b/teacher.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Teacher Dashboard</title>
-    <link rel="stylesheet" href="teacherdec.css">
+    <link rel="stylesheet" href="teachdec.css">
 </head>
 <body>
 
