--- a/index.html
+++ b/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Attendance System</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Smart Attendance System</title>
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
-    <div class="container">
+
+<div class="main-container">
+    <div class="hero-card">
         <h1>Smart Attendance System</h1>
+        <p class="subtitle">Efficient • Simple • Organized</p>
 
         <div class="card-container">
-            <a href="teacher.html" class="card">
-                <h2>Teacher Dashboard</h2>
+            <a href="teacher.html" class="dashboard-card teacher">
+                <h2>👩‍🏫 Teacher Dashboard</h2>
+                <p>Manage students, subjects and mark attendance</p>
             </a>
 
-            <a href="student.html" class="card">
-                <h2>Student Dashboard</h2>
+            <a href="student.html" class="dashboard-card student">
+                <h2>🎓 Student Dashboard</h2>
+                <p>View subject-wise and overall attendance</p>
             </a>
         </div>
     </div>
+</div>
+
 </body>
 </html>
