fix teacher adding

--- a/teacher.html
+++ b/teacher.html
@@ -18,12 +18,17 @@
     </div>
 
     <!-- Add Student Section -->
-    <div class="card">
-        <h2>Add New Student</h2>
-        <input type="text" id="studentName" placeholder="Enter Student Name">
-        <button onclick="addStudent()">Add Student</button>
-        <div id="studentMessage"></div>
-    </div>
+    <div class="section">
+    <h2>Add New Student</h2>
+
+    <input type="text" id="studentName" placeholder="Enter Student Name" />
+    <input type="email" id="studentEmail" placeholder="Enter Student Email" />
+
+    <button onclick="addStudent()">Add Student</button>
+
+    <p id="studentMessage"></p>
+</div>
+
 
     <div class="card">
     <h2>Mark Attendance</h2>
