--- a/teacher.html
+++ b/teacher.html
@@ -18,7 +18,7 @@
     </div>
 
     <!-- Add Student Section -->
-    <div class="section">
+    <div class="card">
     <h2>Add New Student</h2>
 
     <input type="text" id="studentName" placeholder="Enter Student Name" />
